--- a/index.html
+++ b/index.html
@@ -127,3 +127,69 @@
         </ul>
     </nav>
 
+    <!-- Main Content -->
+    <main class="app-main-content">
+        <div class="architecture-diagram">
+            <!-- Citizen Facing Digital Channels -->
+            <div class="layer-title" id="citizen-facing">Citizen Facing Digital Channels</div>
+            <div class="architecture-row">
+                <a href="service-applications.html" class="architecture-box">GOV.UK Websites</a>
+                <a href="service-applications.html" class="architecture-box">GOV.UK Notify</a>
+                <a href="service-applications.html" class="architecture-box">GOV.UK Mobile App</a>
+                <a href="service-applications.html" class="architecture-box">GOV.UK Chat</a>
+                <a href="service-applications.html" class="architecture-box">Third Party Solutions</a>
+            </div>
+
+            <!-- Interaction Layer -->
+            <div class="layer-title" id="interaction-layer">Interaction Layer</div>
+            <div class="architecture-row">
+                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Digital Backbone</a>
+                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Forms</a>
+                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK OneLogin</a>
+                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Pay</a>
+                <a href="integration.html" class="architecture-box layer-interaction">Public Sector APIs</a>
+            </div>
+
+            <!-- Business Logic -->
+            <div class="layer-title" id="business-logic">Business Logic</div>
+            <div class="architecture-row">
+                <a href="corporate-services.html" class="architecture-box layer-business">HMRC Tax System</a>
+                <a href="corporate-services.html" class="architecture-box layer-business">DVLA Drivers System</a>
+                <a href="corporate-services.html" class="architecture-box layer-business">DEFRA Grants</a>
+                <a href="corporate-services.html" class="architecture-box layer-business">HMPO Passport</a>
+                <a href="corporate-services.html" class="architecture-box layer-business">MoJ Justice Services</a>
+            </div>
+
+            <!-- Data Layer -->
+            <div class="layer-title" id="data-layer">Data Layer</div>
+            <div class="architecture-row">
+                <a href="data-information.html" class="architecture-box layer-data">GOV.UK CMS</a>
+                <a href="data-information.html" class="architecture-box layer-data">Data Marketplace</a>
+                <a href="data-information.html" class="architecture-box layer-data">Public Sector Data Stores</a>
+            </div>
+
+            <!-- Planned Layers -->
+            <div class="layer-title" id="planned-layers">Planned Layers</div>
+            <div class="architecture-row">
+                <a href="#" class="architecture-box layer-exchange">National Digital Exchange (Planned)</a>
+                <a href="#" class="architecture-box layer-cloud">Cloud Services (Planned)</a>
+            </div>
+        </div>
+    </main>
+</div>
+
+<!-- GOV.UK Footer -->
+<footer class="govuk-footer">
+    <div class="govuk-width-container">
+        <p class="govuk-footer__meta">© Crown copyright</p>
+    </div>
+</footer>
+
+<!-- GOV.UK Frontend JS -->
+<script type="module" src="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.js"></script>
+<script type="module">
+    import { initAll } from 'https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.js'
+    initAll()
+</script>
+</body>
+</html>
