--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- GOV.UK Frontend CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css">
-
+    
     <style>
         .app-content-wrapper {
             display: flex;
@@ -29,3 +29,160 @@
             display: grid;
             grid-template-columns: 220px auto;
             gap: 20px;
+            margin-top: 30px;
+        }
+        .architecture-row {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+        }
+        .architecture-box {
+            flex: 1;
+            min-width: 160px;
+            background: #1d70b8;
+            color: #fff;
+            text-align: center;
+            padding: 18px;
+            font-family: "GDS Transport", Arial, sans-serif;
+            font-weight: 700;
+            font-size: 16px;
+            text-decoration: none;
+            transition: background-color 0.15s ease-in-out;
+        }
+        .architecture-box:hover {
+            background: #003078;
+            text-decoration: underline;
+        }
+        /* Colour variations */
+        .layer-interaction { background: #4c2c92; }
+        .layer-business { background: #28a197; }
+        .layer-data { background: #d4351c; }
+        .layer-exchange { background: #f47738; }
+        .layer-cloud { background: #0b0c0c; }
+    </style>
+</head>
+<body class="govuk-template__body">
+<script>
+    document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
+</script>
+
+<!-- GOV.UK Header -->
+<header class="govuk-header" data-module="govuk-header">
+    <div class="govuk-header__container govuk-width-container">
+        <div class="govuk-header__logo">
+            <a href="/" class="govuk-header__link govuk-header__link--homepage">GOV.UK</a>
+        </div>
+        <div class="govuk-header__content">
+            <a href="index.html" class="govuk-header__link govuk-header__service-name">Digital Architecture</a>
+        </div>
+    </div>
+</header>
+
+<!-- Top Navigation Tabs -->
+<nav class="app-service-nav govuk-!-margin-bottom-3" style="background:#f3f2f1; border-bottom:1px solid #b1b4b6;">
+    <div class="govuk-width-container">
+        <ul class="app-service-nav__list" style="display:flex; list-style:none; padding:0; margin:0;">
+            <li><a class="app-service-nav__link govuk-link" href="index.html">Documentation</a></li>
+            <li><a class="app-service-nav__link govuk-link" href="#">Support</a></li>
+            <li><a class="app-service-nav__link govuk-link" href="#">Contact</a></li>
+        </ul>
+    </div>
+</nav>
+
+<!-- Phase Banner -->
+<div class="govuk-width-container">
+    <div class="govuk-phase-banner">
+        <p class="govuk-phase-banner__content">
+            <strong class="govuk-tag govuk-phase-banner__content__tag">Alpha</strong>
+            <span class="govuk-phase-banner__text">
+                This page is an Alpha version and is not an official GOV.UK page.
+            </span>
+        </p>
+    </div>
+</div>
+
+<!-- Main Blue Header -->
+<div class="app-product-header govuk-!-padding-top-6 govuk-!-padding-bottom-6" style="background:#1d70b8; color:#fff; text-align:center;">
+    <h1 class="govuk-heading-xl" style="color:#fff;">GOV.UK Digital Architecture</h1>
+    <p class="govuk-body-l" style="color:#fff;">Building digital capability through common technology and services</p>
+</div>
+
+<!-- Content Wrapper -->
+<div class="app-content-wrapper">
+    <!-- Sidebar Navigation -->
+    <nav class="app-sidebar">
+        <h2 class="govuk-heading-s">Contents</h2>
+        <ul class="govuk-list govuk-list--bullet">
+            <li><a href="#citizen-facing" class="govuk-link">Citizen Facing Digital Channels</a></li>
+            <li><a href="#interaction-layer" class="govuk-link">Interaction Layer</a></li>
+            <li><a href="#business-logic" class="govuk-link">Business Logic</a></li>
+            <li><a href="#data-layer" class="govuk-link">Data Layer</a></li>
+            <li><a href="#planned-layers" class="govuk-link">Planned Layers</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="app-main-content">
+        <div class="architecture-diagram">
+            <!-- Citizen Facing Digital Channels -->
+            <div class="govuk-heading-m" id="citizen-facing">Citizen Facing Digital Channels</div>
+            <div class="architecture-row">
+                <a href="service-applications.html" class="architecture-box">GOV.UK Websites</a>
+                <a href="service-applications.html" class="architecture-box">GOV.UK Notify</a>
+                <a href="service-applications.html" class="architecture-box">GOV.UK Mobile App</a>
+                <a href="service-applications.html" class="architecture-box">GOV.UK Chat</a>
+                <a href="service-applications.html" class="architecture-box">Third Party Solutions</a>
+            </div>
+
+            <!-- Interaction Layer -->
+            <div class="govuk-heading-m" id="interaction-layer">Interaction Layer</div>
+            <div class="architecture-row">
+                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Digital Backbone</a>
+                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Forms</a>
+                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK OneLogin</a>
+                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Pay</a>
+                <a href="integration.html" class="architecture-box layer-interaction">Public Sector APIs</a>
+            </div>
+
+            <!-- Business Logic -->
+            <div class="govuk-heading-m" id="business-logic">Business Logic</div>
+            <div class="architecture-row">
+                <a href="corporate-services.html" class="architecture-box layer-business">HMRC Tax System</a>
+                <a href="corporate-services.html" class="architecture-box layer-business">DVLA Drivers System</a>
+                <a href="corporate-services.html" class="architecture-box layer-business">DEFRA Grants</a>
+                <a href="corporate-services.html" class="architecture-box layer-business">HMPO Passport</a>
+                <a href="corporate-services.html" class="architecture-box layer-business">MoJ Justice Services</a>
+            </div>
+
+            <!-- Data Layer -->
+            <div class="govuk-heading-m" id="data-layer">Data Layer</div>
+            <div class="architecture-row">
+                <a href="data-information.html" class="architecture-box layer-data">GOV.UK CMS</a>
+                <a href="data-information.html" class="architecture-box layer-data">Data Marketplace</a>
+                <a href="data-information.html" class="architecture-box layer-data">Public Sector Data Stores</a>
+            </div>
+
+            <!-- Planned Layers -->
+            <div class="govuk-heading-m" id="planned-layers">Planned Layers</div>
+            <div class="architecture-row">
+                <a href="#" class="architecture-box layer-exchange">National Digital Exchange (Planned)</a>
+                <a href="#" class="architecture-box layer-cloud">Cloud Services (Planned)</a>
+            </div>
+        </div>
+    </main>
+</div>
+
+<!-- GOV.UK Footer -->
+<footer class="govuk-footer">
+    <div class="govuk-width-container">
+        <p class="govuk-footer__meta">© Crown copyright</p>
+    </div>
+</footer>
+
+<!-- GOV.UK Frontend JS -->
+<script src="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.js"></script>
+<script>
+    window.GOVUKFrontend.initAll()
+</script>
+</body>
+</html>
