--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             grid-template-columns: 220px auto;
             gap: 20px;
             margin-top: 30px;
+            align-items: center; /* Align layer titles with boxes */
+        }
+        .govuk-heading-m.layer-title {
+            color: #1d70b8; /* GOV.UK blue for layer titles */
+            margin-top: auto;
+            margin-bottom: auto;
         }
         .architecture-row {
             display: flex;
@@ -47,18 +53,22 @@
             font-weight: 700;
             font-size: 16px;
             text-decoration: none;
-            transition: background-color 0.15s ease-in-out;
+            transition: background-color 0.2s ease-in-out;
         }
         .architecture-box:hover {
-            background: #003078;
-            text-decoration: underline;
+            filter: brightness(115%); /* Slightly lighter shade on hover */
         }
         /* Colour variations */
         .layer-interaction { background: #4c2c92; }
+        .layer-interaction:hover { filter: brightness(115%); }
         .layer-business { background: #28a197; }
+        .layer-business:hover { filter: brightness(115%); }
         .layer-data { background: #d4351c; }
+        .layer-data:hover { filter: brightness(115%); }
         .layer-exchange { background: #f47738; }
+        .layer-exchange:hover { filter: brightness(115%); }
         .layer-cloud { background: #0b0c0c; }
+        .layer-cloud:hover { filter: brightness(115%); }
 
         /* Top navigation spacing */
         .app-service-nav__list {
@@ -66,7 +76,7 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            gap: 30px; /* Adds spacing between tabs */
+            gap: 40px; /* Increased spacing between tabs */
         }
         .app-service-nav__link {
             font-size: 19px;
@@ -100,9 +110,9 @@
 <nav class="app-service-nav govuk-!-margin-bottom-3" style="background:#f3f2f1; border-bottom:1px solid #b1b4b6;">
     <div class="govuk-width-container">
         <ul class="app-service-nav__list">
-            <li><a class="app-service-nav__link" href="index.html">Documentation</a></li>
-            <li><a class="app-service-nav__link" href="#">Support</a></li>
-            <li><a class="app-service-nav__link" href="#">Contact</a></li>
+            <li><a href="index.html" class="app-service-nav__link">Documentation</a></li>
+            <li><a href="#" class="app-service-nav__link">Support</a></li>
+            <li><a href="#" class="app-service-nav__link">Contact</a></li>
         </ul>
     </div>
 </nav>
@@ -143,7 +153,7 @@
     <main class="app-main-content">
         <div class="architecture-diagram">
             <!-- Citizen Facing Digital Channels -->
-            <div class="govuk-heading-m" id="citizen-facing">Citizen Facing Digital Channels</div>
+            <div class="govuk-heading-m layer-title" id="citizen-facing">Citizen Facing Digital Channels</div>
             <div class="architecture-row">
                 <a href="service-applications.html" class="architecture-box">GOV.UK Websites</a>
                 <a href="service-applications.html" class="architecture-box">GOV.UK Notify</a>
@@ -153,7 +163,7 @@
             </div>
 
             <!-- Interaction Layer -->
-            <div class="govuk-heading-m" id="interaction-layer">Interaction Layer</div>
+            <div class="govuk-heading-m layer-title" id="interaction-layer">Interaction Layer</div>
             <div class="architecture-row">
                 <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Digital Backbone</a>
                 <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Forms</a>
@@ -163,7 +173,7 @@
             </div>
 
             <!-- Business Logic -->
-            <div class="govuk-heading-m" id="business-logic">Business Logic</div>
+            <div class="govuk-heading-m layer-title" id="business-logic">Business Logic</div>
             <div class="architecture-row">
                 <a href="corporate-services.html" class="architecture-box layer-business">HMRC Tax System</a>
                 <a href="corporate-services.html" class="architecture-box layer-business">DVLA Drivers System</a>
@@ -173,7 +183,7 @@
             </div>
 
             <!-- Data Layer -->
-            <div class="govuk-heading-m" id="data-layer">Data Layer</div>
+            <div class="govuk-heading-m layer-title" id="data-layer">Data Layer</div>
             <div class="architecture-row">
                 <a href="data-information.html" class="architecture-box layer-data">GOV.UK CMS</a>
                 <a href="data-information.html" class="architecture-box layer-data">Data Marketplace</a>
@@ -181,7 +191,7 @@
             </div>
 
             <!-- Planned Layers -->
-            <div class="govuk-heading-m" id="planned-layers">Planned Layers</div>
+            <div class="govuk-heading-m layer-title" id="planned-layers">Planned Layers</div>
             <div class="architecture-row">
                 <a href="#" class="architecture-box layer-exchange">National Digital Exchange (Planned)</a>
                 <a href="#" class="architecture-box layer-cloud">Cloud Services (Planned)</a>
