--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <li><a href="#interaction-layer" class="govuk-link">Interaction Layer</a></li>
             <li><a href="#business-logic" class="govuk-link">Business Logic</a></li>
             <li><a href="#data-layer" class="govuk-link">Data Layer</a></li>
-            <li><a href="#planned-layers" class="govuk-link">Planned Layers</a></li>
+            <li><a href="#Infrastructure-layers" class="govuk-link">Infrastructure Layers</a></li>
         </ul>
     </nav>
 
@@ -190,11 +190,11 @@
                 <a href="data-information.html" class="architecture-box layer-data">Public Sector Data Stores</a>
             </div>
 
-            <!-- Planned Layers -->
-            <div class="govuk-heading-m layer-title" id="planned-layers">Planned Layers</div>
+            <!-- Infrastructure Layers -->
+            <div class="govuk-heading-m layer-title" id="Infrastructure-layers">Infrastructure Layers</div>
             <div class="architecture-row">
-                <a href="#" class="architecture-box layer-exchange">National Digital Exchange (Planned)</a>
-                <a href="#" class="architecture-box layer-cloud">Cloud Services (Planned)</a>
+                <a href="#" class="architecture-box layer-exchange">National Digital Exchange (Infrastructure)</a>
+                <a href="#" class="architecture-box layer-cloud">Cloud Services (Infrastructure)</a>
             </div>
         </div>
     </main>
