--- a/index.html
+++ b/index.html
@@ -25,58 +25,12 @@
             flex: 1;
             padding: 30px 40px;
         }
-        .architecture-diagram {
-            display: grid;
-            grid-template-columns: 220px auto;
-            gap: 20px;
-            margin-top: 30px;
-            align-items: center; /* Align layer titles with boxes */
-        }
-        .govuk-heading-m.layer-title {
-            color: #1d70b8; /* GOV.UK blue for layer titles */
-            margin-top: auto;
-            margin-bottom: auto;
-        }
-        .architecture-row {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-        }
-        .architecture-box {
-            flex: 1;
-            min-width: 160px;
-            background: #1d70b8;
-            color: #fff;
-            text-align: center;
-            padding: 18px;
-            font-family: "GDS Transport", Arial, sans-serif;
-            font-weight: 700;
-            font-size: 16px;
-            text-decoration: none;
-            transition: background-color 0.2s ease-in-out;
-        }
-        .architecture-box:hover {
-            filter: brightness(115%); /* Slightly lighter shade on hover */
-        }
-        /* Colour variations */
-        .layer-interaction { background: #4c2c92; }
-        .layer-interaction:hover { filter: brightness(115%); }
-        .layer-business { background: #28a197; }
-        .layer-business:hover { filter: brightness(115%); }
-        .layer-data { background: #d4351c; }
-        .layer-data:hover { filter: brightness(115%); }
-        .layer-exchange { background: #f47738; }
-        .layer-exchange:hover { filter: brightness(115%); }
-        .layer-cloud { background: #0b0c0c; }
-        .layer-cloud:hover { filter: brightness(115%); }
-
-        /* Top navigation spacing */
         .app-service-nav__list {
             display: flex;
             list-style: none;
             padding: 0;
             margin: 0;
-            gap: 40px; /* Increased spacing between tabs */
+            gap: 40px;
         }
         .app-service-nav__link {
             font-size: 19px;
@@ -98,7 +52,7 @@
 <header class="govuk-header" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
         <div class="govuk-header__logo">
-            <a href="/" class="govuk-header__link govuk-header__link--homepage">GOV.UK</a>
+            <a href="index.html" class="govuk-header__link govuk-header__link--homepage">GOV.UK</a>
         </div>
         <div class="govuk-header__content">
             <a href="index.html" class="govuk-header__link govuk-header__service-name">Digital Architecture</a>
@@ -112,7 +66,7 @@
         <ul class="app-service-nav__list">
             <li><a href="index.html" class="app-service-nav__link">Documentation</a></li>
             <li><a href="#" class="app-service-nav__link">Support</a></li>
-            <li><a href="#" class="app-service-nav__link">Contact</a></li>
+            <li><a href="contact.html" class="app-service-nav__link">Contact</a></li>
         </ul>
     </div>
 </nav>
@@ -132,7 +86,7 @@
 <!-- Main Blue Header -->
 <div class="app-product-header govuk-!-padding-top-6 govuk-!-padding-bottom-6" style="background:#1d70b8; color:#fff; text-align:center;">
     <h1 class="govuk-heading-xl" style="color:#fff;">GOV.UK Digital Architecture</h1>
-    <p class="govuk-body-l" style="color:#fff;">A reference model for designing citizen-facing services</p>
+    <p class="govuk-body-l" style="color:#fff;">Building digital capability through common technology and services</p>
 </div>
 
 <!-- Content Wrapper -->
@@ -141,62 +95,18 @@
     <nav class="app-sidebar">
         <h2 class="govuk-heading-s">Contents</h2>
         <ul class="govuk-list govuk-list--bullet">
-            <li><a href="#citizen-facing" class="govuk-link">Citizen Facing Digital Channels</a></li>
-            <li><a href="#interaction-layer" class="govuk-link">Interaction Layer</a></li>
-            <li><a href="#business-logic" class="govuk-link">Business Logic</a></li>
-            <li><a href="#data-layer" class="govuk-link">Data Layer</a></li>
-            <li><a href="#Infrastructure-layers" class="govuk-link">Infrastructure Layers</a></li>
+            <li><a href="introduction.html" class="govuk-link">Introduction</a></li>
+            <li><a href="who-this-is-for.html" class="govuk-link">Who this is for</a></li>
+            <li><a href="how-to-use.html" class="govuk-link">How to use it</a></li>
+            <li><a href="citizen-facing-architecture.html" class="govuk-link">Citizen-facing reference architecture</a></li>
+            <li><a href="contact.html" class="govuk-link">Contact us</a></li>
         </ul>
     </nav>
 
     <!-- Main Content -->
     <main class="app-main-content">
-        <div class="architecture-diagram">
-            <!-- Citizen Facing Digital Channels -->
-            <div class="govuk-heading-m layer-title" id="citizen-facing">Citizen Facing Digital Channels</div>
-            <div class="architecture-row">
-                <a href="service-applications.html" class="architecture-box">GOV.UK Websites</a>
-                <a href="service-applications.html" class="architecture-box">GOV.UK Notify</a>
-                <a href="service-applications.html" class="architecture-box">GOV.UK Mobile App</a>
-                <a href="service-applications.html" class="architecture-box">GOV.UK Chat</a>
-                <a href="service-applications.html" class="architecture-box">Third Party Solutions</a>
-            </div>
-
-            <!-- Interaction Layer -->
-            <div class="govuk-heading-m layer-title" id="interaction-layer">Interaction Layer</div>
-            <div class="architecture-row">
-                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Digital Backbone</a>
-                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Forms</a>
-                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK OneLogin</a>
-                <a href="integration.html" class="architecture-box layer-interaction">GOV.UK Pay</a>
-                <a href="integration.html" class="architecture-box layer-interaction">Public Sector APIs</a>
-            </div>
-
-            <!-- Business Logic -->
-            <div class="govuk-heading-m layer-title" id="business-logic">Business Logic</div>
-            <div class="architecture-row">
-                <a href="corporate-services.html" class="architecture-box layer-business">HMRC Tax System</a>
-                <a href="corporate-services.html" class="architecture-box layer-business">DVLA Drivers System</a>
-                <a href="corporate-services.html" class="architecture-box layer-business">DEFRA Grants</a>
-                <a href="corporate-services.html" class="architecture-box layer-business">HMPO Passport</a>
-                <a href="corporate-services.html" class="architecture-box layer-business">MoJ Justice Services</a>
-            </div>
-
-            <!-- Data Layer -->
-            <div class="govuk-heading-m layer-title" id="data-layer">Data Layer</div>
-            <div class="architecture-row">
-                <a href="data-information.html" class="architecture-box layer-data">GOV.UK CMS</a>
-                <a href="data-information.html" class="architecture-box layer-data">Data Marketplace</a>
-                <a href="data-information.html" class="architecture-box layer-data">Public Sector Data Stores</a>
-            </div>
-
-            <!-- Infrastructure Layers -->
-            <div class="govuk-heading-m layer-title" id="Infrastructure-layers">Infrastructure Layers</div>
-            <div class="architecture-row">
-                <a href="#" class="architecture-box layer-exchange">National Digital Exchange (Infrastructure)</a>
-                <a href="#" class="architecture-box layer-cloud">Cloud Services (Infrastructure)</a>
-            </div>
-        </div>
+        <h2 class="govuk-heading-l">Welcome</h2>
+        <p class="govuk-body">Use the navigation menu to explore the Citizen-Facing Architecture reference model and supporting guidance.</p>
     </main>
 </div>
 
